eglibc (2.13-9) UNRELEASED; urgency=low

  * 

 -- Aurelien Jarno <aurel32@debian.org>  Thu, 30 Jun 2011 09:25:44 +0200

eglibc (2.13-8) unstable; urgency=low

  [ Samuel Thibault ]
  * Add patches/hurd-i386/submitted-ldsodefs.h.diff to fix loading binaries
    with GNU/Hurd-specific extensions, disabled for now.
  * patches/hurd-i386/local-sendmsg-SCM_RIGHTS.diff: Do not call getauth(),
    use the __USEPORT() cache macro instead. This should fix zsh FTBFS with
    duplicate getproc() symbol.

  [ Aurelien Jarno ]
  * Add patches/any/cvs-addmntent.diff to correctly report errors status in 
    addmntent().  Closes: #630699 / CVE-2011-1089.
  * Add patches/any/cvs-resolv-different-nameserver.diff to try a different
    nameserver if the first one returns REFUSED.  Closes: #535504, #602291.
  * Update patches/svn-updates to revision 14337:
    - Remove any/cvs-glro_dl_debug_mask.diff (merged). 
    - Remove i386/cvs-memmove-static.diff (merged).
  * debian/control: clean-up Uploaders: .
  * Add patches/any/cvs-fnmatch.diff to fix an integer overflow in 
    fnmatch() (CVE-2011-1659).  Closes: #626370.
  * Add an entry to NEWS.Debian about multiarch and passing flags to the 
    compiler on pre-multiarch toolchains.
  * Replace sparc/submitted-ifunc2.diff by upstream version 
    any/cvs-ifunc.diff.
  * Fix patches/hppa/submitted-nptl-carlos.diff to correctly pass 
    --as-needed and --no-as-needed to the linker.
  * Update breaks on pre-multiarch packages.  Closes: #631907.
  * libc.preinst: improve and simplify search for old libraries, detect
    broken LD_LIBRARY_PATH.  Closes: #630608.
  * libc.postrm: remove support code from Sarge.
  * rules.d/debhelper.mk: install bug files using dh_bugfiles.

  [ Petr Salinger ]
  * kfreebsd/local-sysdeps.diff: update to revision 3501 (from glibc-bsd).
    to fix <bits/siginfo.h>.  Closes: #631867.
  * Drop kfreebsd/local-ftw.diff, needed only for pre 8.0 kernels.
