@@ -1,10 +1,12 @@
 For the patch directory we follow this naming scheme:
 
-  {ARCH|all|any}/{local|branch|cvs|submitted}-"Description"
+  {ARCH|all|any}/{local|branch|cvs|submitted|unsubmitted}-"Description"
   
 Branch means commited in the upstream branch.
 CVS means committed in the upstream trunk.
 Submitted means we're hopeful that it will go in.
+Unsubmitted means we have not submitted upstream yet because patch is not ready
+for upstream yet, but we want to eventually
 Local means that it's not going upstream.
 
 The goal is to get all patches to "Branch".  Patches should be split by
