@@ -1,5 +1,6 @@
 struct ortentry and struct ifalias req are actually not defined
 struct arpreq is defined, but can not be passed to an ioctl on the Hurd.
+so let's make packages not believe these are available.
 
 ---
  sysdeps/mach/hurd/bits/ioctls.h |    6 ++++++
