@@ -1,5 +1,5 @@
 Do not warn about madvise not being implemented. It does not have any real
-semantic anyway, and that brings some FTBFS.
+semantic anyway, and that brings some -Werror FTBFS.
 
 ---
  misc/madvise.c        |    4 ++--
