@@ -1,5 +1,6 @@
 On the Hurd we always at least start the sigthread anyway.  Let's avoid forking
-the file (which would mean having to maintain it)
+the file (which would mean having to maintain it), but it thus can't be applied
+upstream as such.
 
 ---
  sysdeps/i386/i486/bits/atomic.h |  107 +++++++++++++---------------------------
