@@ -1,5 +1,7 @@
 Allow the kernel to start earlier than VM_MAX_ADDRESS
 
+A bit hackish.
+
 ---
  sysdeps/mach/hurd/dl-sysdep.c |   26 ++++++++++++++++++++------
  1 file changed, 20 insertions(+), 6 deletions(-)
