@@ -1,3 +1,5 @@
+Roland disagrees with this undo.
+
 2007-07-22  Thomas Schwinge  <tschwinge@gnu.org>
 
         * sysdeps/mach/hurd/i386/init-first.c: Undo parts of Roland's `r 1.43'
