@@ -1,3 +1,5 @@
+This isn't needed on linux, should check why.
+
 2010-08-22  Samuel Thibault  <samuel.thibault@ens-lyon.org>
 
         * sysdeps/mach/i386/sysdep.h [__ASSEMBLER__] (__i686): New macro.
