@@ -1,4 +1,5 @@
 TLS support
+TODO: get rid of threadvar variables
 
 ---
  csu/libc-start.c                        |    2 +
