@@ -93,10 +93,10 @@ hppa/submitted-stackinfo.diff
 
 hurd-i386/local-dl-dynamic-weak.diff
 hurd-i386/local-enable-ldconfig.diff
-hurd-i386/local-mlock.diff
-hurd-i386/local-tls.diff
-hurd-i386/local-tls-support.diff
-hurd-i386/local-gcc-4.1-init-first.diff
+hurd-i386/unsubmitted-mlock.diff
+hurd-i386/unsubmitted-tls.diff
+hurd-i386/unsubmitted-tls-support.diff
+hurd-i386/unsubmitted-gcc-4.1-init-first.diff
 hurd-i386/submitted-posix_opt.h.diff
 hurd-i386/submitted-ioctl-decode-argument.diff
 hurd-i386/submitted-libc_once.diff
@@ -110,34 +110,34 @@ hurd-i386/submitted-IPV6_PKTINFO.diff
 hurd-i386/submitted-extern_inline.diff
 hurd-i386/submitted-critical-sections.diff
 hurd-i386/submitted-dup2-fix.diff
-hurd-i386/local-check_native.diff
+hurd-i386/unsubmitted-check_native.diff
 hurd-i386/submitted-dl-sysdep.diff
 hurd-i386/submitted-itimer-lock.diff
-hurd-i386/local-pthread_types.diff
-hurd-i386/local-_dl_random.diff
-hurd-i386/local-unwind-resume.diff
+hurd-i386/unsubmitted-pthread_types.diff
+hurd-i386/unsubmitted-_dl_random.diff
+hurd-i386/unsubmitted-unwind-resume.diff
 hurd-i386/submitted-null-pathname.diff
 hurd-i386/submitted-sbrk.diff
-hurd-i386/local-thread-cancel.diff
+hurd-i386/unsubmitted-thread-cancel.diff
 hurd-i386/submitted-readlinkat.diff
 hurd-i386/submitted-SOL_IP.patch
-hurd-i386/local-bigmem.diff
+hurd-i386/unsubmitted-bigmem.diff
 hurd-i386/local-disable-ioctls.diff
-hurd-i386/local-longjmp_chk.diff
-hurd-i386/local-locarchive.diff
+hurd-i386/unsubmitted-longjmp_chk.diff
+hurd-i386/unsubmitted-locarchive.diff
 hurd-i386/submitted-regex_internal.diff
-hurd-i386/local-mkdir_root.diff
-hurd-i386/local-i686.diff
-hurd-i386/local-no-hp-timing.diff
+hurd-i386/unsubmitted-mkdir_root.diff
+hurd-i386/unsubmitted-i686.diff
+hurd-i386/unsubmitted-no-hp-timing.diff
 hurd-i386/submitted-catch-signal.diff
-hurd-i386/local-sendmsg-SCM_RIGHTS.diff
+hurd-i386/unsubmitted-sendmsg-SCM_RIGHTS.diff
 hurd-i386/cvs-header-prot.diff
 hurd-i386/cvs-psiginfo.diff
-hurd-i386/local-ptsname.diff
+hurd-i386/unsubmitted-ptsname.diff
 hurd-i386/cvs-if_freereq.diff
 hurd-i386/submitted-add-needed.diff
 hurd-i386/local-ED.diff
-hurd-i386/local-pthread_posix-option.diff
+hurd-i386/unsubmitted-pthread_posix-option.diff
 hurd-i386/local-madvise_warn.diff
 
 ia64/local-dlfptr.diff
