@@ -1,8 +1,10 @@
 eglibc (2.13-9) UNRELEASED; urgency=low
 
-  * 
+  [ Samuel Thibault ]
+  * patches/README: Add "unsubmitted" category.
+  * Rename most local hurd-i386 patches into unsubmitted.
 
- -- Aurelien Jarno <aurel32@debian.org>  Thu, 30 Jun 2011 09:25:44 +0200
+ -- Samuel Thibault <sthibault@debian.org>  Thu, 30 Jun 2011 09:52:43 +0200
 
 eglibc (2.13-8) unstable; urgency=low
 
